# iamdead.fyi

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: authenticator.yml  deploy.yml  frontend.yml  react.yml  rust.yml  wasm.yml
authenticator/: .env  Cargo.toml  db.sqlite3
authenticator/src/: auth.rs  indie_auth.rs  main.rs  state.rs  user.rs
authenticator/src/fixtures/: adapters.rs  mod.rs
authenticator/src/format/: testament.rs
authenticator/src/routes/: user.rs
backend/: Cargo.toml
backend/src/: main.rs
backend/src/fixtures/: pol.rs  recipients.rs  testaments.rs
backend/src/format/: testament.rs
backend/src/routes/: indie_auth.rs  mod.rs  testament.rs  user.rs
crypto/: Cargo.toml
crypto-js/: Cargo.toml  README.md
crypto-js/pkg/: icod_crypto_js.d.ts  icod_crypto_js.js  icod_crypto_js_bg.wasm  icod_crypto_js_bg.wasm.d.ts
crypto-js/src/: conv.rs  encryption.rs  identify.rs  lib.rs  secure_restore.rs  shamir.rs
crypto/src/: encryption.rs  lib.rs  shamir.rs
data/: Cargo.toml
data/migrations/2023-05-17-133737_create_users/: up.sql
data/src/: lib.rs  migrations.rs  models.rs  schema.rs
data/src/db/: mod.rs  user.rs
data/src/models/: adapter.rs  mod.rs  pol.rs  recipient.rs  testament.rs  user.rs
frontend/: .prettierrc.json  Dockerfile  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: colors.scss  index.css  index.scss  index.tsx  routes.tsx  setupProxy.js
frontend/src/components/: app.tsx  encrypted-message-view.tsx  loader.tsx  next-step-button.tsx  piece-dialog.tsx  piece-options.tsx  piece-view.tsx  qr-with-clipboard.tsx  row.tsx
frontend/src/components/app/: app.tsx
frontend/src/components/container/: container.tsx  styles.module.scss
frontend/src/components/divider/: divider.tsx  styles.module.scss
frontend/src/components/draggable-number/: draggable-number.tsx  index.ts  styles.module.scss
frontend/src/components/draggable-number-input/: draggable-number-input.tsx  index.ts  styles.module.scss
frontend/src/components/evergreen-theme/: evergreen-theme.tsx  index.ts
frontend/src/components/loader/: loader.tsx  styles.module.scss
frontend/src/components/message-editor/: index.ts  message-editor.tsx  styles.module.scss
frontend/src/components/modal/: modal.tsx  styles.module.scss
frontend/src/components/navigation/: navigation.tsx  styles.module.scss
frontend/src/components/progress-bar/: progress-bar.tsx  styles.module.scss
frontend/src/components/sign-in/: hooks.ts  sign-in.tsx
frontend/src/components/slab/: slab.tsx
frontend/src/hooks/: use-alter-chunk-name.ts  use-buffered-state.ts  use-chunks.ts  use-crypto-preload.ts  use-default-subpath.ts  use-is-active.ts  use-is-online.ts  use-outside-click.ts  use-previous.ts  use-secure-message.ts  use-user.ts
frontend/src/hooks/user/: use-adapters.ts  use-recipients.ts  use-testaments.ts  use-user.ts
frontend/src/pages/dashboard/: dashboard.tsx  hooks.ts
frontend/src/pages/dev/: dev.tsx
frontend/src/pages/devtools/: devtools.tsx
frontend/src/pages/devtools/editor/: editor.tsx
frontend/src/pages/devtools/recover/: recover.tsx
frontend/src/pages/editor/: crypto.ts  editor.tsx
frontend/src/pages/home/: footer.tsx  home.tsx  main.tsx  navigation.tsx
frontend/src/pages/login/: login.tsx  styles.module.scss
frontend/src/pages/login/indie-auth/: hooks.ts  index.ts  indie-auth-form.module.scss  indie-auth-form.tsx  indie-auth-redirect.tsx
frontend/src/pages/not-found/: not-found.tsx
frontend/src/pages/oldwizard/: consts.ts  hooks.ts  wizard.tsx
frontend/src/pages/oldwizard/common/: types.ts
frontend/src/pages/oldwizard/message/: message-placeholder.ts
frontend/src/pages/oldwizard/proof-of-life/: proof-of-life.tsx
frontend/src/pages/oldwizard/security/: security.tsx
frontend/src/pages/oldwizard/wizard-context/: index.ts  security.ts
frontend/src/pages/recover/: index.ts  recover.tsx
frontend/src/pages/scan/: scan.tsx
frontend/src/pages/scan/components/: file-import.tsx  import-methods.tsx  qr-import.tsx  qr-reader.tsx
frontend/src/pages/secure/: SecureMessageResult.tsx  secure.tsx
frontend/src/pages/store/: store.tsx
frontend/src/pages/wizard/: consts.ts  styles.module.scss  wizard.tsx
frontend/src/pages/wizzard/: consts.ts  hooks.ts  index.ts  wizzard-context.ts  wizzard.tsx
frontend/src/services/: axios.ts  crypto.ts  download-chunk.ts  download-file.ts  index.ts  parts-collector.ts
frontend/src/services/adapters/: adapters.ts  adapters.tsx  index.ts  types.ts
frontend/src/utils/: math.ts  string.ts
(+132 files in other folders)
