[package]
name = "icod-authenticator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
dotenvy = "0.15.7"
form_urlencoded = "1.1.0"
jsonwebtoken = "8.3.0"
serde = { version = "1.0", features = ["derive"] }
surf = "2.3.2"
tide = "0.16.0"
tide-jwt = "0.1.1"
tide-tracing = "0.0.12"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

icod-data = { path = "../data/" }
async-trait = "0.1.68"
