[package]
name = "icod-crypto-js"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies]
data-encoding = "2.4.0"
icod-crypto = { path = "../crypto" }
serde = { version = "1.0.164", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2"

# required to make wasm32-unknown-unknown target work since
# this target is used by wasm-pack.
# By enabling this feature we assume running in js-enabled
# environment.
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]
