[package]
name = "icod-crypto"
version = "0.1.0"
edition = "2021"

[features]
tracing = ["dep:tracing"]

[dependencies]
aes-gcm-siv = "0.11.1"
blake2 = "0.10.6"
gf256 = { version = "0.3.0", features = ["shamir", "thread-rng"] }
hex = "0.4.3"
thiserror = "1.0.40"
tracing = { version = "0.1.37", optional = true }
