[package]
name = "icod-crypto"
version = "0.1.0"
edition = "2021"

[features]
tracing = ["dep:tracing"]

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies]
aes-gcm-siv = "0.11.1"
blake2 = "0.10.6"
gf256 = { version = "0.3.0", features = ["shamir", "thread-rng"] }
hex = "0.4.3"
thiserror = "1.0.66"
tracing = { version = "0.1.40", optional = true }
