[package]
name = "icod-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.37"

[dependencies.libsqlite3-sys]
version = "0.26.0"
features = ["bundled"]
