[package]
name = "icod-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"

[dependencies.libsqlite3-sys]
version = "0.27.0"
features = ["bundled"]
